--- a/calculator.html
+++ b/calculator.html
@@ -1150,14 +1150,14 @@ textarea:focus {
               <li>
                 Guide to use
                 <strong
-                  ><a href="/need-help.html" style="text-decoration: underline"
+                  ><a href="need-help.html" style="text-decoration: underline"
                     >Duty Saving Calculator</a
                   ></strong
                 >
               </li>
               <li>
                 <strong
-                  ><a href="/faq.html" style="text-decoration: underline"
+                  ><a href="faq.html" style="text-decoration: underline"
                     >FAQs</a
                   ></strong
                 >
@@ -2548,9 +2548,9 @@ textarea:focus {
       </div>
     </main>
     <div class="faq">
-      <a href="/need-help.html">Need Help?</a>
+      <a href="need-help.html">Need Help?</a>
       <a href="/need-help.html">Instruction Manual</a>
-      <a href="/faq.html">FAQs</a>
+      <a href="faq.html">FAQs</a>
     </div>
     <div id="custom-feedback-modal" class="modal-container">
         <div class="modal-box">
