--- a/calculator.html
+++ b/calculator.html
@@ -1261,7 +1261,7 @@ textarea:focus {
           <h1>Duty Saving Calculator - MOOWR Scheme</h1>
           <div class="right-div">
             <!-- <img src="<?php echo get_template_directory_uri(); ?>/images/12.avif" onerror="this.onerror=null; this.src='logo.svg'" alti id="logo" alt="logo" /> -->
-            <img src="images/12.avif" alt="logo" />
+            <img src="img/12.avif" alt="logo" />
           </div>
         </div>
 
