--- a/calculator.html
+++ b/calculator.html
@@ -3886,9 +3886,9 @@ textarea:focus {
     // const url = "<?php echo get_template_directory_uri(); ?>/test.pdf";
     let url;
     if (value8 >= 0) {
-      url = "Profit.pdf";
+      url = "https://github.com/Hackyvirus/MOOWR-BETA-VERSION/blob/main/Profit.pdf";
     } else {
-      url = "Loss.pdf";
+      url = "https://github.com/Hackyvirus/MOOWR-BETA-VERSION/blob/main/Loss.pdf";
     }
   
     const existingPdfBytes = await fetch(url).then((res) => res.arrayBuffer());
