--- a/calculator.html
+++ b/calculator.html
@@ -1243,14 +1243,14 @@ textarea:focus {
                 <li>
                   Guide to use
                   <strong
-                    ><a href="https://optitaxs.com/moowr-need-help/" style="text-decoration: underline"
+                    ><a href="https://github.com/Hackyvirus/MOOWR-BETA-VERSION/blob/main/need-help.html" style="text-decoration: underline"
                       >Duty Saving Calculator</a
                     ></strong
                   >
                 </li>
                 <li>
                   <strong
-                    ><a href="https://optitaxs.com/moowr-scheme-faqs/" style="text-decoration: underline"
+                    ><a href="https://github.com/Hackyvirus/MOOWR-BETA-VERSION/blob/main/faq.html" style="text-decoration: underline"
                       >FAQs</a
                     ></strong
                   >
@@ -3049,8 +3049,8 @@ textarea:focus {
       </div>
     </main>
     <div class="faq">
-      <a href="https://optitaxs.com/moowr-need-help/">Need Help?</a>
-      <a href="https://optitaxs.com/moowr-scheme-faqs/">FAQs</a>
+      <a href="https://github.com/Hackyvirus/MOOWR-BETA-VERSION/blob/main/need-help.html">Need Help?</a>
+      <a href="https://github.com/Hackyvirus/MOOWR-BETA-VERSION/blob/main/faq.html/">FAQs</a>
     </div>
     <div id="custom-feedback-modal" class="modal-container">
         <div class="modal-box">
@@ -3886,9 +3886,9 @@ textarea:focus {
     // const url = "<?php echo get_template_directory_uri(); ?>/test.pdf";
     let url;
     if (value8 >= 0) {
-      url = "https://github.com/Hackyvirus/MOOWR-BETA-VERSION/blob/main/Profit.pdf";
+      url = "https://hackyvirus.github.io/MOOWR-BETA-VERSION/Profit.pdf";
     } else {
-      url = "https://github.com/Hackyvirus/MOOWR-BETA-VERSION/blob/main/Loss.pdf";
+      url = "https://hackyvirus.github.io/MOOWR-BETA-VERSION/Loss.pdf";
     }
   
     const existingPdfBytes = await fetch(url).then((res) => res.arrayBuffer());
