--- a/index.html
+++ b/index.html
@@ -739,7 +739,7 @@
         .left-main,
         .right-main {
           width: 90%;
-          text-align: center;
+          text-align: left;
           justify-content: space-evenly;
           height: 50%;
           margin: auto;
