--- a/index.html
+++ b/index.html
@@ -745,14 +745,14 @@ get_header();
         .left-main,
         .right-main {
           width: 90%;
-          text-align: center;
+          text-align: start;
           justify-content: space-evenly;
           height: 50%;
           margin: auto;
           padding-bottom: 30px;
         }
         .left-main-div h2 {
-          font-size: 60px;
+          font-size: 45px;
         }
         .left-main-div p {
           font-size: 18px;
