--- a/index.html
+++ b/index.html
@@ -760,7 +760,7 @@ get_header();
         .left-main,
         .right-main {
           width: 90%;
-          text-align: center;
+          text-align: start;
           height: 50%;
           margin: auto;
           padding-bottom: 30px;
@@ -1006,7 +1006,7 @@ get_header();
       <div class="right-main">
         <i>Brought to you by the authors of </i>
         <!-- <img src="<?php echo get_template_directory_uri(); ?>/images/image.png" onerror="this.onerror=null; this.src='src="images\image.png" alt="Tax Calculator" /> -->
-        <img src="img/image.png" onerror="this.onerror=null; this.src='src="images\image.png" alt="Tax Calculator" />
+        <img src="image.png" onerror="this.onerror=null; this.src='src="images\image.png" alt="Tax Calculator" />
       </div>
     </div>
 
