--- a/calculator.html
+++ b/calculator.html
@@ -1257,7 +1257,7 @@ textarea:focus {
                 <li>
                   Guide to use
                   <strong
-                    ><a href="https://optitaxs.com/moowr-need-help/" style="text-decoration: underline"
+                    ><a href="https://hackyvirus.github.io/MOOWR-BETA-VERSION/need-help.html" style="text-decoration: underline"
                       >Duty Saving Calculator</a
                     ></strong
                   >
@@ -3063,7 +3063,7 @@ textarea:focus {
       </div>
     </main>
     <div class="faq">
-      <a href="https://optitaxs.com/moowr-need-help/">Need Help?</a>
+      <a href="https://hackyvirus.github.io/MOOWR-BETA-VERSION/need-help.html">Need Help?</a>
       <a href="https://optitaxs.com/moowr-scheme-faqs/">FAQs</a>
     </div>
     <div id="custom-feedback-modal" class="modal-container">
