--- a/index.html
+++ b/index.html
@@ -566,7 +566,6 @@ get_header();
       @media only screen and (min-width: 350px) and (max-width: 600px) {
         body {
           font-size: 18px; /* Increase font size for tablets */
-          background-color: red;
         }
         .main-container {
           padding: 10px;
@@ -745,14 +744,14 @@ get_header();
         .left-main,
         .right-main {
           width: 90%;
-          text-align: start;
+          text-align: center;
           justify-content: space-evenly;
           height: 50%;
           margin: auto;
           padding-bottom: 30px;
         }
         .left-main-div h2 {
-          font-size: 45px;
+          font-size: 60px;
         }
         .left-main-div p {
           font-size: 18px;
@@ -760,7 +759,7 @@ get_header();
         .left-main,
         .right-main {
           width: 90%;
-          text-align: start;
+          text-align: center;
           height: 50%;
           margin: auto;
           padding-bottom: 30px;
@@ -1006,7 +1005,7 @@ get_header();
       <div class="right-main">
         <i>Brought to you by the authors of </i>
         <!-- <img src="<?php echo get_template_directory_uri(); ?>/images/image.png" onerror="this.onerror=null; this.src='src="images\image.png" alt="Tax Calculator" /> -->
-        <img src="image.png" onerror="this.onerror=null; this.src='src="images\image.png" alt="Tax Calculator" />
+        <img src="images/image.png" onerror="this.onerror=null; this.src='src="images\image.png" alt="Tax Calculator" />
       </div>
     </div>
 
