--- a/index.html
+++ b/index.html
@@ -1005,7 +1005,7 @@ get_header();
       <div class="right-main">
         <i>Brought to you by the authors of </i>
         <!-- <img src="<?php echo get_template_directory_uri(); ?>/images/image.png" onerror="this.onerror=null; this.src='src="images\image.png" alt="Tax Calculator" /> -->
-        <img src="images/image.png" onerror="this.onerror=null; this.src='src="images\image.png" alt="Tax Calculator" />
+        <img src="image.png" onerror="this.onerror=null; this.src='src="images\image.png" alt="Tax Calculator" />
       </div>
     </div>
 
